# atmos-cli

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt
atmos_cli/: api.py  config.py  constants.py  display.py  main.py
tests/: test_api.py  test_bugs.py  test_chart_unixtime.py  test_config.py  test_display.py  test_forecast_days_validation_bug.py  test_main.py  test_timezone_default.py  test_unixtime_bug.py
